[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Laser.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 119.911 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.0351563, 0.0351563, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.47807, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0

[sub_resource type="Environment" id=9]
background_mode = 4
background_energy = 1.25
glow_enabled = true
glow_levels/4 = true
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0

[node name="Laser" type="RayCast2D"]
enabled = true
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, -0.0553257 )
scale = Vector2( 1, 0.613071 )
points = PoolVector2Array( -0.143265, 0.113419, 22.6003, 0.113419 )
width = 8.0
default_color = Color( 1, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 740.758, 0.61716 )
shape = SubResource( 1 )

[node name="CastingParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )

[node name="CollisionParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 7 )

[node name="BeamParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )
